<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DangoAuto</string>
    <string name="app_name_full">DangoAuto - Tu Concesionario</string>
    <string name="app_description">Tu concesionario de confianza</string>
    <string name="btn_buscar_filtrar">Buscar / Filtrar</string>
    <string name="btn_vender_coche">Vender Coche</string>
    <string name="btn_comprar_coche">Comprar Coche (Asistente IA)</string>
    <string name="search_hint">Buscar coches...</string>
    <string name="filter_title">Filtros Avanzados</string>
    <string name="marca">Marca</string>
    <string name="modelo">Modelo</string>
    <string name="precio_min">Precio Mínimo</string>
    <string name="precio_max">Precio Máximo</string>
    <string name="dni_nie">Número de Identificación (DNI/NIE)</string>
    <string name="telefono">Número de Teléfono</string>
    <string name="email">Correo Electrónico</string>
    <string name="coche">Coche (Marca y Modelo)</string>
    <string name="matricula">Matrícula</string>
    <string name="kilometros">Kilómetros</string>
    <string name="combustible">Combustible</string>
    <string name="descripcion">Descripción</string>
    <string name="caracteristicas">Características</string>
    <string name="caracteristicas_form">Características (separadas por comas)</string>
    <string name="precio">Precio (€)</string>
    <string name="año">Año</string>
    <string name="potencia">Potencia (CV)</string>
    <string name="transmision">Transmisión</string>
    <string name="btn_subir_info">Subir Información del Coche</string>
    <string name="btn_seleccionar_fotos">Seleccionar Fotos</string>
    <string name="info_subida">Información del coche subida correctamente</string>
    <string name="campos_vacios">Por favor, complete todos los campos</string>
    <string name="ficha_tecnica">Ficha Técnica</string>
    <string name="especificaciones">Especificaciones</string>
</resources>
